--- a/Dash/Base.lproj/Document.xib
+++ b/Dash/Base.lproj/Document.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14460.31"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -28,5 +28,20 @@
             </connections>
             <point key="canvasLocation" x="219" y="147"/>
         </window>
+        <popUpButton verticalHuggingPriority="750" id="OJp-Ct-ans">
+            <rect key="frame" x="0.0" y="0.0" width="100" height="26"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="9hj-8R-m2E" id="Q6D-wB-Ees">
+                <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                <font key="font" metaFont="menu"/>
+                <menu key="menu" id="apa-aU-zsB">
+                    <items>
+                        <menuItem title="Item 1" state="on" id="9hj-8R-m2E"/>
+                        <menuItem title="Item 2" id="3d4-8E-En3"/>
+                        <menuItem title="Item 3" id="wWm-wo-iy8"/>
+                    </items>
+                </menu>
+            </popUpButtonCell>
+        </popUpButton>
     </objects>
 </document>
