--- a/Dash/Base.lproj/MainMenu.xib
+++ b/Dash/Base.lproj/MainMenu.xib
@@ -138,7 +138,7 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="WRV-NI-Exz"/>
-                            <menuItem title="Edit Mode" keyEquivalent="e" id="uRl-iY-unG">
+                            <menuItem title="Show Inspector" keyEquivalent="e" id="uRl-iY-unG">
                                 <connections>
                                     <action selector="editMode:" target="-1" id="hl2-x2-Ekl"/>
                                 </connections>
