Remove webview nib

--- a/Dash/Base.lproj/Document.xib
+++ b/Dash/Base.lproj/Document.xib
@@ -53,14 +53,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="244" height="433"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
-                                                <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" indentationPerLevel="16" outlineTableColumn="VqE-uH-Vx2" id="rAy-Qj-qBj">
+                                                <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" indentationPerLevel="16" outlineTableColumn="VqE-uH-Vx2" id="rAy-Qj-qBj">
                                                     <rect key="frame" x="0.0" y="0.0" width="244" height="433"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <size key="intercellSpacing" width="3" height="0.0"/>
                                                     <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                     <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                     <tableColumns>
-                                                        <tableColumn width="241" minWidth="16" maxWidth="1000" id="VqE-uH-Vx2">
+                                                        <tableColumn editable="NO" width="241" minWidth="16" maxWidth="1000" id="VqE-uH-Vx2">
                                                             <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                                                 <font key="font" metaFont="smallSystem"/>
                                                                 <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
